[package]
name = "apt-transport-s3"
version = "0.1.0"
edition = "2018"

[[bin]]
path = "transport.rs"
name = "apt-transport-s3"

[dependencies]
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.17-alpha", package = "aws-config" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.17-alpha", package = "aws-sdk-s3"}
aws-types  = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.17-alpha", package = "aws-types"}
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
stderrlog = "*"
log = "*"
http = "*"
md-5 = "*"
sha2 = "*"
hyper ="*"
tokio-stream = "*"
generic-array = "*"
tempfile = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
